--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,10 +5,37 @@ body {
 }
 
 .header {
-	min-height: 150px; 
+	/*min-height: 150px; */
 	border-bottom: 1px solid #ddd; 
 }
+.navbar {
+	padding: 40px 0;
+}
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .active > a {
+	background: none;
+	color: #46b8da;
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
+}
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+	background: none;
 
+}
+.navbar-default {
+	border-radius: 0;
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
+	background: #ffffff;
+	border: none;
+}
+.navbar-nav > li > a {
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 300;
+	font-size: 18px;
+	/*padding: 40px 20px;*/
+}
 .main-container {
 	box-shadow: 1px 1px 1px #ccc; 
 }
